Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,6 @@ stages :
   jobs:
   - deployment: Deploy
     displayName: Deploy to AKS
-    environment: 'k8s-prod.default'
     pool: default
     strategy:
       runOnce:
@@ -56,6 +55,7 @@ stages :
           - task: KubernetesManifest@0
             inputs:
               action: 'createSecret'
+              kubernetesServiceConnection: 'k8s-connection'
               namespace: 'default'
               secretType: 'dockerRegistry'
               secretName: '$(acrsecret)'
@@ -63,6 +63,7 @@ stages :
           - task: KubernetesManifest@0
             inputs:
               action: 'deploy'
+              kubernetesServiceConnection: 'k8s-connection'
               namespace: 'default'
               manifests: |
                 $(Pipeline.Workspace)/manifests/deployment.yml
