--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,7 @@ stages :
         publishLocation: 'pipeline'
 - stage: Deploy
   displayName: Deploy to AKS
+  environment: k8s-prod.default
   dependsOn: Build
   pool: default
   variables:
