Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,5 +58,5 @@ stages:
         kubernetesServiceConnection: 'k8s-connection'
         namespace: 'default'
         manifests: |
-           '$(Pipeline.Workspace)/manifests/deployment.yml'
-           '$(Pipeline.Workspace)/manifests/service.yml'
+           $(Pipeline.Workspace)/manifests/deployment.yml
+           $(Pipeline.Workspace)/manifests/service.yml
