Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,5 +51,6 @@ stages:
         kubernetesServiceConnection: 'k8s-connection'
         namespace: 'default'
         manifests: |
-           $(Pipeline.Workspace)/manifests/deployment.yml
-           $(Pipeline.Workspace)/manifests/service.yml
+          $(Pipeline.Workspace)/manifests/deployment.yml
+          $(Pipeline.Workspace)/manifests/service.yml
+        imagePullSecrets: '$(acrsecret)'
