--- a/kubernetes/service.yml
+++ b/kubernetes/service.yml
@@ -7,6 +7,6 @@ spec:
     selector:
         app: cryptoapp
     ports:
-      protocol: TCP
+      - protocol: TCP
       port: 80
       targetPort: 8051
