--- a/kubernetes/service.yml
+++ b/kubernetes/service.yml
@@ -7,5 +7,5 @@ spec:
     selector:
         app: cryptoapp
     ports:
-      port: 80
-      targetPort: 8051
+     - port: 80
+     - targetPort: 8051
