--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -17,3 +17,49 @@ spec:
           image: registruaks.azurecr.io/cryptoapp
           ports:
           - containerPort: 8051
+apiVersion: v1
+kind: Pod
+metadata:
+  name: cryptoapp
+  labels:
+    app: cryptoapp
+spec:
+  containers:
+  - image: "registruaks.azurecr.io/cryptoapp"
+    ports:
+    - containerPort: 8051
+      protocol: TCP
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: cryptoapp
+spec:
+  selector:
+    app: cryptoapp
+  ports:
+  - protocol: TCP
+    port: 8051
+    targetPort: 8051
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: cryptoapp
+  annotations:
+    kubernetes.io/ingress.class: azure/ingress-appgateway
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /
+        backend:
+          service:
+            name: cryptoapp
+            port:
+              number: 8051
+        pathType: Exact
