--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -1,48 +1,19 @@
-
-apiVersion: v1
-kind: Pod
+apiVersion : apps/v1
+kind: Deployment
 metadata:
-  name: cryptoapp
-  labels:
-    app: cryptoapp
+  name: cryptoapp 
 spec:
-  containers:
-  - image: "registruaks.azurecr.io/cryptoapp"
-    name: crypto-image
-    ports:
-    - containerPort: 80
-      protocol: TCP
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: cryptoapp
-spec:
+  replicas: 1
   selector:
-    app: cryptoapp
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
-
----
-
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: cryptoapp
-  annotations:
-    kubernetes.io/ingress.class: azure/ingress-appgateway
-spec:
-  rules:
-  - http:
-      paths:
-      - path: /
-        backend:
-          service:
-            name: cryptoapp
-            port:
-              number: 80
-        pathType: Exact
+    matchLabels:
+      app: cryptoapp
+  template:
+    metadata:
+      labels:
+        app: cryptoapp
+    spec:
+      containers:
+        - name: cryptoapp 
+          image: registruaks.azurecr.io/cryptoapp
+          ports:
+          - containerPort: 80
