Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,4 +52,5 @@ stages:
         namespace: 'default'
         manifests: |
           $(Pipeline.Workspace)/manifests/deployment.yml
+          $(Pipeline.Workspace)/manifests/services.yml
         imagePullSecrets: '$(acrsecret)'
