--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,7 @@ stages:
   variables:
     acrsecret: k8sacrauth
     acrurl: 'registruaks.azurecr.io'
+    imageRepo: cryptoapp
   jobs:
   - job: Deploy
     displayName: Deploy to AKS
