--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ stages:
         containerRegistry: 'acr-connection'
         repository: '$(imageRepo)'
         command: 'buildAndPush'
-        Dockerfile: '$(Build.SourcesDirectory)/app/Dockerfile'
+        Dockerfile: '$(Build.SourcesDirectory)/app/Dockerfileupgrade'
         tags: $(tag)
     - task: PublishPipelineArtifact@1
       inputs:
